// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="ButtonGroup-root"
    >
      <button
        class="MuiButtonBase-root Button-basic Button-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          «
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-basic Button-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          ⟨
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-basic Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          ...
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-basic Button-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          2
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-basic Button-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          3
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-basic Button-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          4
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-primary Button-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          5
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-basic Button-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          6
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-basic Button-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          7
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-basic Button-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          8
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-basic Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          ...
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-basic Button-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          ⟩
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-basic Button-root ButtonGroup-button"
        tabindex="0"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          »
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders disabled 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="ButtonGroup-root"
    >
      <button
        class="MuiButtonBase-root Button-basic Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          «
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-basic Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          ⟨
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-basic Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          ...
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-basic Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          2
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-basic Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          3
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-basic Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          4
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-primary Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          5
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-basic Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          6
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-basic Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          7
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-basic Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          8
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-basic Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          ...
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-basic Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          ⟩
        </div>
      </button>
      <button
        class="MuiButtonBase-root Button-basic Button-root MuiButtonBase-disabled ButtonGroup-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="Button-children ButtonGroup-button"
        >
          »
        </div>
      </button>
    </div>
  </div>
</div>
`;
